# GP

./: README.md
Baccarat/RobotServer/trunk/src/: CMakeLists.txt  Configure.cpp  Configure.h
Baccarat/RobotServer/trunk/src/admin/: GetPlayInfo.h  ReloadConf.cpp
Baccarat/RobotServer/trunk/src/model/: CoinConf.cpp  CoinConf.h
Baccarat/RobotServer/trunk/src/process/: ApplyBankerProc.h  CancleProcess.cpp  CancleProcess.h  GameOverProc.cpp  GameOverProc.h  GetDetailProcess.cpp  GetMemberProc.cpp  KickOutPlayerProc.cpp  LoginProcess.h  LogoutProcess.cpp  NoteLeaveListProc.cpp  RotateProcess.cpp
BullFight/: CMakeLists.txt
BullFight/AllocServer/: CMakeLists.txt
BullFight/GameServer/many/src/: Configure.cpp  Configure.h  IProcess.cpp
BullFight/GameServer/many/src/model/: GameLogic.cpp  GameLogic.h  Player.h  Room.cpp  Room.h  TableTimer.cpp
BullFight/GameServer/many/src/process/: ApplyBankerProc.cpp  ApplyBankerProc.h  ApplySeatProc.cpp  ApplySeatProc.h  BetCoinProc.cpp  BetCoinProc.h  GetBankerListProc.h  GetPlayerListProc.cpp  GetPlayerListProc.h  GetTableDetailProc.cpp  LeaveProcess.cpp  LeaveProcess.h  LogComingProc.cpp  LogComingProc.h  LogoutProcess.h  PushCardProc.h
BullFight/RobotServer/many/src/: CMakeLists.txt  Configure.h  Despatch.cpp  GameCmd.h  HallHandler.cpp  HallHandler.h  IProcess.h  ProcessFactory.cpp  Version.h
BullFight/RobotServer/many/src/admin/: GetPlayInfo.cpp
BullFight/RobotServer/many/src/backconnect/: GameServerConnect.cpp
BullFight/RobotServer/many/src/model/: Player.h  PlayerTimer.cpp  PlayerTimer.h
BullFight/RobotServer/many/src/process/: ApplyBankerProc.cpp  BetCoinProcess.cpp  GameOverProc.cpp  HeartProcess.cpp  LoginComingProc.cpp  NotifyProc.cpp  NotifyProc.h  UpdateTabStatusProc.h
Flower/AllocServer/: CMakeLists.txt
Flower/GameServer/hundred/src/: AllocSvrConnect.cpp  CMakeLists.txt  IProcess.cpp  IProcess.h  Main.cpp
Flower/GameServer/hundred/src/admin/: GetAllUserStatus.h  GetFreePlayer.cpp  GetFreePlayer.h  GetPlayInfo.cpp  GetRoomInfoProcess.cpp  GetRoomInfoProcess.h
Flower/GameServer/hundred/src/model/: CoinConf.cpp  CoinConf.h  GameLogic.h  Room.h
Flower/GameServer/hundred/src/process/: ApplyBankerProc.h  ApplySeatProc.h  GetBankerListProc.cpp  GetHistoryProc.h  GetJackPotProc.cpp  GetMoneyProc.cpp  GetMoneyProc.h  GetPlayerListProc.h  GetTableDetailProc.cpp  HeartBeatProc.cpp  LeaveProcess.cpp  LeaveProcess.h  LogComingProc.cpp  LogComingProc.h  LogoutProcess.cpp
Flower/RobotServer/fight/src/: CMakeLists.txt  Configure.cpp  Configure.h  Despatch.cpp  GameCmd.h  HallHandler.h  Main.cpp
Flower/RobotServer/fight/src/admin/: GetFreePlayerProc.h  ReloadConf.cpp
Flower/RobotServer/fight/src/model/: GameLogic.cpp  Player.cpp  PlayerManager.cpp  PlayerTimer.h
Flower/RobotServer/hundred/src/: CMakeLists.txt  Configure.h
Flower/RobotServer/hundred/src/model/: Player.h  (+2 more)
HttpSvr/: CConfig.h  CHttpReqDispatch.cpp  CMakeLists.txt  CalUsingTime.cpp  GameCmd.h  HttpSvr-DebugDDCrypto.vgdbsettings  HttpSvr-Release.vgdbsettings  HttpSvr-ReleaseDDCrypto.vgdbsettings  HttpSvr.cpp  HttpSvr.vcxproj.filters  HttpSvrUcenterXY.opensdf  HttpSvrUcenterXY.sln  MySqlDBAccessMgr.h  RedisAccessMgr.h  compile.sh  debug.mak  debug.mak.old  debugddcrypto.mak  debugddcrypto.mak.old  gcc_Debug.h  gcc_Release.h  release.mak  release.mak.old  threadres.cpp
HttpSvr/CodeDB/HttpSvr-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001  HttpSvr.npd  codedb.lck
HttpSvr/CodeDB/HttpSvr-Release-Win32/: CHttpReqDispatch.npa  CHttpReqDispatch.npd  GlobalFileTable.000  codedb.lck
HttpSvr/CodeDB/HttpSvrUCenterXY-Debug-Win32/: GlobalFileTable.000
HttpSvr/comm/: EvtClientMgr.cpp  EvtClientMgr.h  HttpLib.cpp  HttpLib.h  Packet.cpp  RedisLogic.cpp  RedisLogic.h  SqlLogic.h  TcpMsg.h  UserDoing.h  XyCrypto.h  XyCryptoEx.cpp  XyRsa.h
HttpSvr/comm/Util/: CommonServerConfig.cpp  CommonServerConfig.h  ErrorMsg.h  Helper.h  IniFile.cpp  IniFile.h  NamePool.cpp  NamePool.h  Version.h  base64.cpp  url_code.cpp  url_code.h
HttpSvr/conf/: ucenter - testSvr.json  ucenter.json.bak
HttpSvr/conf/roomconfig/: 12.json  4.json  50.json  6.json  8.json  9.json
HttpSvr/http_handle/: CAccountLogin.h  CBankFindPasswd.cpp  CBankSaveMoney.cpp  CCheckMnick.h  CCheckUserName.h  CGetCheating.cpp  CGetDrawGold.h  CGetFeedBackHistory.cpp  CGetFeedBackSet.cpp  CGetFeedBackSet.h  CGetGameInfo.h  CGetGameOnline.cpp  CGetGameOnline.h  CGetGameResource.cpp  CGetGameResource.h  CGetGameSwitch.cpp  CGetGameSwitch.h  CGetGameVersion.cpp  CGetPayInfo.h  CGetProductRoomConfig.cpp  CGetProductRoomConfig.h  CGetRank.cpp  CGetRankAwardRules.h  CGetRoomConfig.cpp  CGetTaskInfo.cpp  CGetTaskInfo.h  CGetWinGoldRank.cpp  CGetWinGoldRank.h  CGuestBinding.cpp  CGuestBinding.h  CGuestLogin.cpp  CGuestLogin.h  CIssuedAccount.h  CReceiveBenefits.cpp  CRegBindingAliPay.cpp  CRegBindingAliPay.h  CRegGetPassword.cpp  CRegGetPassword.h  CRegResetPassword.cpp  CRegUserNameBinding.cpp  (+3 more)
HttpSvr/third/HttSvrComm/include/: EvtTimer.h  MsgQueue.h  SpiderHttp.h  StrFunc.h
TexasGame/Texas/: CMakeLists.txt
banco/: CMakeLists.txt
banco/AllocServer/many/: CMakeLists.txt
banco/AllocServer/trunk/: CMakeLists.txt
banco/GameServer/many/src/: AllocSvrConnect.cpp  CMakeLists.txt  IProcess.cpp
banco/GameServer/trunk/src/: CMakeLists.txt  GameCmd.h  IProcess.h  Main.cpp
banco/RobotServer/trunk/src/: GameCmd.h  Main.cpp
banco/RobotServerCrypt/: CMakeLists.txt
golden/: CMakeLists.txt
golden/GameServer/fight/src/: AllocSvrConnect.h  CMakeLists.txt  Configure.cpp  Configure.h  GameCmd.h  IProcess.cpp  Main.cpp
golden/GameServer/hundred/src/: AllocSvrConnect.h  Configure.cpp  Configure.h  GameCmd.h
golden/RobotServer/fight/src/: Despatch.h  HallHandler.cpp  RobotDefine.h
golden/RobotServer/hundred/src/: Configure.cpp  GameCmd.h  Main.cpp
golden/RobotServer/many_crypt/: CMakeLists.txt
show-hand/Showhand/: CMakeLists.txt
show-hand/Showhand/AllocServer/: CMakeLists.txt
show-hand/Showhand/RobotServer/hundred/: CMakeLists.txt
show-hand/Showhand/RobotServer/hundred_crypt/: CMakeLists.txt
(+1194 files in other folders)
